src/objects/Driver_Action__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account this action relates to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Driver Actions</relationshipLabel>
        <relationshipName>Driver_Actions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Required over $500</inlineHelpText>
        <label>Approver Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Vehicle Card Number</inlineHelpText>
        <label>Card Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.RecordTypeId</field>
                <operation>equals</operation>
                <value>Service Operations</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipName>GSA_Action_Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Company_Vehicle_Identifier__c</fullName>
        <defaultValue>&quot;G&quot;</defaultValue>
        <description>G-Tag</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>License plate or G-Tag</inlineHelpText>
        <label>Company Vehicle Identifier</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollar_Amount__c</fullName>
        <label>Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Driver_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Driver Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSA_Region__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>GSA Region</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Address__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Service or approximate vehicle location</inlineHelpText>
        <label>Location Address</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_City__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Location Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Phone__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Location phone number</inlineHelpText>
        <label>Location Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Location_State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location_Zip__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Auth_Class__c</fullName>
        <label>Product Auth Class</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car Wash</fullName>
                </value>
                <value>
                    <fullName>Fuel</fullName>
                </value>
                <value>
                    <fullName>Parts &amp; Service</fullName>
                </value>
                <value>
                    <fullName>Roadside Assistance</fullName>
                    <default>true</default>
                    <label>Roadside Assistance</label>
                </value>
                <value>
                    <fullName>Quick Lube</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Auth_Class__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Car Wash (interior and exterior)</fullName>
                </value>
                <value>
                    <fullName>Diesel</fullName>
                </value>
                <value>
                    <fullName>E-85</fullName>
                </value>
                <value>
                    <fullName>Other (put what kind in the comments)</fullName>
                </value>
                <value>
                    <fullName>Premium Diesel</fullName>
                </value>
                <value>
                    <fullName>Super Unleaded</fullName>
                </value>
                <value>
                    <fullName>Unleaded</fullName>
                </value>
                <value>
                    <fullName>Unleaded Plus</fullName>
                </value>
                <value>
                    <fullName>Air Conditioning Service</fullName>
                </value>
                <value>
                    <fullName>Automotive Glass (replacement or repair)</fullName>
                </value>
                <value>
                    <fullName>Batteries (put how many batteries in the comments)</fullName>
                </value>
                <value>
                    <fullName>Body Work (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Brake Service (put in comments whether it is front or rear)</fullName>
                </value>
                <value>
                    <fullName>Electronics Service (put which electronics in the comments)</fullName>
                </value>
                <value>
                    <fullName>Engine Service (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Exhaust/Emissions Service (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Fuel System (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Inspection (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Lamps</fullName>
                </value>
                <value>
                    <fullName>Steering/Suspension Service (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Tire-related (Wheel Balance, Valve Stem)</fullName>
                </value>
                <value>
                    <fullName>Tires (put how many tires in the comments)</fullName>
                </value>
                <value>
                    <fullName>Transmission Service (describe what was done in the comments)</fullName>
                </value>
                <value>
                    <fullName>Transportation (other than towing)</fullName>
                </value>
                <value>
                    <fullName>Wipers</fullName>
                </value>
                <value>
                    <fullName>Battery Service</fullName>
                </value>
                <value>
                    <fullName>Fuel Delivery</fullName>
                </value>
                <value>
                    <fullName>Lock-Out</fullName>
                </value>
                <value>
                    <fullName>Tire Change</fullName>
                </value>
                <value>
                    <fullName>Tow</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Roadside Assistance</fullName>
                </value>
                <value>
                    <fullName>FedPay Over $100</fullName>
                </value>
                <value>
                    <fullName>FedPay - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reporting_Date__c</fullName>
        <description>GSA wants reports to run Monday-Sunday, Salesforce&apos;s Last Week filter runs Sunday-Saturday, so this is used in reporting to make the Last Week filter work properly. Keep hidden.</description>
        <formula>CreatedDate -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Vehicle_Class__c</fullName>
        <formula>LEFT( TRIM(Company_Vehicle_Identifier__c) , 3)</formula>
        <label>Vehicle Class</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Tag__c</fullName>
        <formula>MID(TRIM( Company_Vehicle_Identifier__c ), 4, 6)</formula>
        <label>Vehicle Tag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoice__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Vendor Invoice No., if available. Enter N/A otherwise.</inlineHelpText>
        <label>Vendor Invoice #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <label>Vendor</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NAC</fullName>
                </value>
                <value>
                    <fullName>Ford</fullName>
                </value>
                <value>
                    <fullName>GM (Chevrolet, Buick, GMC)</fullName>
                </value>
                <value>
                    <fullName>FCA (Chrysler, Jeep, Dodge, Ram)</fullName>
                    <label>FCA (Chrysler, Jeep, Dodge Ram)</label>
                </value>
                <value>
                    <fullName>Hyundai</fullName>
                </value>
                <value>
                    <fullName>Mitsubishi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Driver Action</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Driver_Actions</fullName>
        <columns>NAME</columns>
        <columns>CaseNumber__c</columns>
        <columns>Account__c</columns>
        <columns>Card_Number__c</columns>
        <columns>GSA_Region__c</columns>
        <columns>Approver_Name__c</columns>
        <columns>Location_City__c</columns>
        <columns>Location_State__c</columns>
        <columns>Dollar_Amount__c</columns>
        <filterScope>Mine</filterScope>
        <label>All Driver Actions</label>
    </listViews>
    <nameField>
        <displayFormat>DA-{000000}</displayFormat>
        <label>Driver Action Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Driver Actions</pluralLabel>
    <recordTypes>
        <fullName>After_Hours</fullName>
        <active>true</active>
        <description>After Hours purchase</description>
        <label>After Hours</label>
    </recordTypes>
    <recordTypes>
        <fullName>Roadside_Assistance</fullName>
        <active>true</active>
        <description>GSA Roadside Assistance</description>
        <label>Roadside Assistance</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Require_Approver_for_After_Hours_gt_500</fullName>
        <active>true</active>
        <description>Requires that the Approver be filled in for After Hours purchases over $500.</description>
        <errorConditionFormula>RecordType.Name  = &quot;After Hours&quot;  &amp;&amp;  Dollar_Amount__c  &gt;= 500.00  &amp;&amp; TRIM(Approver_Name__c) = &quot;&quot;</errorConditionFormula>
        <errorMessage>Approver Name is required for purchases over $500.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_GTag_Structure</fullName>
        <active>true</active>
        <description>Regex validation of GTag</description>
        <errorConditionFormula>NOT( REGEX( UPPER(Company_Vehicle_Identifier__c) , &quot;G[0-9A-Z ]+&quot;))</errorConditionFormula>
        <errorDisplayField>Company_Vehicle_Identifier__c</errorDisplayField>
        <errorMessage>Company Vehicle Identifier (G-Tag) must be entered properly.</errorMessage>
    </validationRules>
</CustomObject>